--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  logger: ^2.4.0
+  provider: ^6.0.0
 
 dev_dependencies:
   flutter_test:
@@ -19,5 +21,9 @@ flutter:
   uses-material-design: true
 
   assets:
+  - lib/Images_PanCakes/
+  - lib/Images_Burger/
+  - lib/images_s/
+  - lib/Images_Pizza/
   - lib/images/
   - lib/icons/
